--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-numpy==1.24.2
+numpy==1.22.4
 pillow==9.4.0
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opencv-python-headless==4.8.0.74
+pandas==1.5.3
+# tensorflow==2.12.0
