--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 ground-truth/* filter=lfs diff=lfs merge=lfs -text
 test/* filter=lfs diff=lfs merge=lfs -text
+ocelot400.h5 filter=lfs diff=lfs merge=lfs -text
