--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ opencv-contrib-python==4.7.0.72
 opencv-python==4.7.0.72
 opencv-python-headless==4.8.0.74
 pandas==1.5.3
-# tensorflow==2.12.0
+tensorflow==2.12.0
